# snippets

./: LICENSE  README.md
apps/fast_html/agent_editor/: Readme.MD  pyproject.toml
apps/fast_html/agent_editor/app/: .sesskey  main.py
apps/fast_html/agent_editor/app/models/: AgentSpec.py
apps/fast_html/agent_editor/app/modules/: __init__.py
apps/fast_html/agent_editor/app/modules/editor/: __init__.py  editor.js  editor.py  simple_editor.js
apps/fast_html/agent_editor/battle_scars/: content_editable_div_sample.html  content_server.py  filtered_keyup.html  htmx_editor.py  min_samples.html  pos.html  split_screen_sample.html  toast.html  track_input.html
apps/fast_html/agent_editor/battle_scars/templates/: index.html
apps/fast_html/docs_search/: DataFetch.ipynb  Readme.MD  pyproject.toml
apps/fast_html/docs_search/app/: .sesskey  DataFetch.ipynb  main.py  minimal.py  requirements.txt  server.py
apps/fast_html/docs_search/app/data/fast_html_help.lance/_transactions/: 0-ca46d0be-c771-4009-a592-2e3f5eb8482c.txn  1-b9868e97-22fb-478c-8d7b-dd0ce90c3f9c.txn  10-421dd38a-62cf-4552-ad72-7368081a1128.txn  11-4d35417d-0ca0-4ab0-82c7-2908043d4db6.txn  2-beb1e609-e725-4ddd-9c0a-c8dd4713896d.txn  3-98ae3b52-2489-4c2f-91a7-ccdfa46832f6.txn  4-b93c6248-4542-4b9d-93e2-6407247bb523.txn  (+5 more)
apps/fast_html/docs_search/app/scripts/: module.js
apps/fast_html/docs_search/app/src/: __init__.py  chat_utils.py
apps/fast_html/docs_search/battle_scars/: chk_server_setup.html  event_source_example.html  raw_response_stream.html  test_sse.html
apps/fast_html/tailwind_setup/: main.css  (+5 more)
(+164 files in other folders)
