[tool.poetry]
name = "docs-search"
version = "0.1.0"
description = "search FastHTML docs as a getting started tutorial"
authors = ["mr-saoirse <amartey@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docs_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
lancedb = "^0.12.0"
openai = "^1.42.0"
pydantic = "^2.8.2"
python-fasthtml = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
